fix spacing

--- a/S_to_F.css
+++ b/S_to_F.css
@@ -3,6 +3,7 @@
 body {
 	background-color: #fff;
     margin: 0;
+    padding: 0;
 }
 menu {
     width: 50%;
